# verifAi

./: .gitignore  .replit  README.md  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  start-production.sh
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted-VerifAI-AI-Powered-KYC-Document-Verification-Platform-Automated-Identity-Verification-Fraud-Det-1764606329470_1764606329471.txt
chroma_db/: chroma.sqlite3
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: GenAIAssistant.tsx  TopNavbar.tsx
client/src/components/diagrams/: AIArchitectureDiagrams.tsx
client/src/hooks/: useAuth.ts
client/src/lib/: queryClient.ts
client/src/pages/: AIArchitecture.tsx  AuditTrail.tsx  Dashboard.tsx  Integrations.tsx  Login.tsx  Patterns.tsx  Settings.tsx  TechnicalDetails.tsx  Upload.tsx  VerificationDetail.tsx
python_backend/: app.py  rag_service.py  requirements.txt
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
